test/errors/annotation_starred_value.py
arr = list(range(10))
arr[2]: str = *"jo"
