test/errors/annotation_starred_value.py.expected
test/errors/annotation_starred_value.py:2 error: starred expression not allowed here
